Actualizar backend para tier gratuito de Render con DeepSeek y Mistral
Cambios principales:
- Agregado soporte para DeepSeek y Mistral LLMs
- Removida dependencia de Anthropic (Claude)
- Configurado render.yaml para tier GRATUITO
- Distribuido LLMs por Sefirot para optimizar costos
- Actualizado README con instrucciones detalladas
- Variables de entorno actualizadas

APIs soportadas:
- Google Gemini (gratis)
- DeepSeek (muy económico)
- Mistral (créditos gratis iniciales)

Listo para desplegar en Render sin costo

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # Google Gemini API
 GOOGLE_API_KEY=tu_clave_google_aqui
 
-# OpenAI API
-OPENAI_API_KEY=tu_clave_openai_aqui
+# DeepSeek API
+DEEPSEEK_API_KEY=tu_clave_deepseek_aqui
 
-# Anthropic Claude API
-ANTHROPIC_API_KEY=tu_clave_anthropic_aqui
+# Mistral API
+MISTRAL_API_KEY=tu_clave_mistral_aqui
