--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: tikun-backend
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn api_server:app --host 0.0.0.0 --port $PORT
     envVars:
@@ -9,7 +10,7 @@ services:
         value: 3.12.0
       - key: GOOGLE_API_KEY
         sync: false
-      - key: OPENAI_API_KEY
+      - key: DEEPSEEK_API_KEY
         sync: false
-      - key: ANTHROPIC_API_KEY
+      - key: MISTRAL_API_KEY
         sync: false
